--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ description = "A simple codebase serializer for LLM Context Windows."
 
 [dependencies]
 anyhow = "1.0.100"
+arboard = "3.6.1"
 chrono = "0.4.42"
 clap = { version = "4.5.53", features = ["derive"] }
 ignore = "0.4.25"
 indicatif = "0.18.3"
 rayon = "1.11.0"
-serde = "1.0.228"
+regex = "1.12.2"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
